* Docman: Files moves to filesystem using the Storage generic class (TrivialDev)
* webanalytics: new plugin to add support for piwik or google analytics tool (TrivialDev)
* User: account ssh key management: rewrite backend, add more informations such as
        fingerprint, deploy flag, easy delete (TrivialDev)

FusionForge-5.2:
* Docman: inject zip as a tree (Capgemini)
* Widget: New User Widget: Last 5 documents published in my project (Capgemini)
* Docman: mass action (Capgemini)
* New Message plugin to display global messages like planned upgrade or outage
  (Alcatel-Lucent).
* Docman: complete rewritten of trash and pending view (Capgemini)
* New Scmhook: complete library to handle hooks for any scm available in
  fusionforge. Currently supporting post-commit and pre-commit hook.
  scmsvn pre-commit and post-commit library is provided (Capgemini)
* New Widget: scmgit personal URL of cloned repositories. Currently just
  a list of URLs of your personal repository cloned from project you
   belong. (Capgemini)
* Docman: interaction with the projects-hierarchy plugin to enable hierarchical
  browsing. (Capgemini)
* Admin: User add membership to multiples projects in one shot (Capgemini)
* New MoinMoinWiki plugin (AdaCore)
* Trackers: New view to display roadmaps view for trackers (Alcatel-Lucent)
* scmsvn: private project can now be browsed with viewvc using user rights management (TrivialDev).
* scmsvn: basic activity support (TrivialDev).

FusionForge-5.1:
* Theme: new Funky Theme (Capgemini)
* Docman: new UI (Capgemini)
* Docman: extract documents and directories as zip archive (Capgemini)
* Docman: rebirth of URL and online creation documents (better with
  HTML editor) (Capgemini) 
* Docman: new reservation document feature (Capgemini)
* HTML Editor: available in task PM (Capgemini)
* Trackers: New progress bar to view completion state (when custom
  status field is used) (Alain Peyrat)